[tool.poetry]
name = "data-analysis-langchain"
version = "0.1.0"
description = ""
authors = ["jsg4hw <jsg4hw@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = {version = ">=0.0.252"}
openai = "^0.27.8"
streamlit = ">=1.26"
langchain-experimental = "^0.0.47"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
